--- a/reservas-hoteles-backend/src/main/resources/application.properties
+++ b/reservas-hoteles-backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=reservas-hoteles-backend
-spring.datasource.url=jdbc:mysql://localhost:3306/reservas_hoteles?createDatabaseIfNotExist=true&verifyServerCertificate=false&useSSL=false
+spring.datasource.url=jdbc:mysql://172.17.0.2:3306/reservas_hoteles?createDatabaseIfNotExist=true&verifyServerCertificate=false&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
 server.port=8180
 
 spring.jpa.show-sql=true
-spring.jpa.propierties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.propierties.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
