--- a/reservas-hoteles-backend/src/main/resources/application.properties
+++ b/reservas-hoteles-backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=reservas-hoteles-backend
-spring.datasource.url=jdbc:mysql://172.17.0.2:3306/reservas_hoteles?createDatabaseIfNotExist=true&verifyServerCertificate=false&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/reservas_hoteles?createDatabaseIfNotExist=true&verifyServerCertificate=false&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
 server.port=8180
